--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,10 +1,15 @@
-h1 {
+h1, h2 {
 	font-family: Oswald, serif;
 	font-weight: normal;
 	text-transform: uppercase;
 	margin-top: 0;
 	margin-bottom: 0.25em;
 	line-height: 1em;
+}
+
+h2 {
+	font-size: 1em;
+	margin-bottom: 0.75em;
 }
 
 a {
@@ -107,8 +112,7 @@ input {
 /* Page: Topic */
 
 .page.topic header,
-.page.topic .map,
-.page.topic footer {
+.page.topic .map {
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -132,19 +136,47 @@ input {
 
 .page.topic .map {
 	top: 2.6em;
-	bottom: 2.6em;
+	bottom: 0;
 }
 
 .page.topic .map .leaflet-container {
 	height: 100%;
 }
 
-.page.topic footer {
-	height: 2.6em;
-	background: #333;
-	bottom: 0;
+.map-settings {
+	position: absolute;
+	top: 0.75em;
+	left: 0.75em;
+	background: rgba(0,0,0,0.7);
+	color: #fff;
+	padding: 0.75em;
+	max-width: 15em;
+	line-height: 1em;
 }
 
-.page.topic footer .slider {
-	margin: 0.75em 2em;
+.map-settings a {
+	color: white;
+}
+
+.map-settings ol {
+	padding-left: 1.5em;
+	line-height: 1.3em;
+}
+
+.slider {
+	margin: 0.75em;
+}
+
+.slider-labels {
+    opacity: 0.8;
+    padding: 0.5em 0;
+    font-size: 0.75em;
+}
+
+.slider-weekago {
+	float: left;
+}
+
+.slider-now {
+	float: right;
 }
